Fixed always visible scrollbar

--- a/Frontend/car-market-app/src/components/Main/Vehicles/Vehicles.scss
+++ b/Frontend/car-market-app/src/components/Main/Vehicles/Vehicles.scss
@@ -31,7 +31,7 @@
     flex-wrap: wrap;
     justify-content: space-evenly;
     max-height: 100%;
-    overflow-y: scroll;
+    overflow-y: auto;
     padding-bottom: 1em;
 }
 
